--- a/TatarDeclension/MainWindow.xaml
+++ b/TatarDeclension/MainWindow.xaml
@@ -6,17 +6,17 @@
         xmlns:local="clr-namespace:TatarDeclension"
         xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="Склонение татарских слов" Height="715.2" Width="480">
+        Title="Склонение татарских слов" Height="715.2" Width="480" SizeToContent="WidthAndHeight" ShowInTaskbar="False" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="Manual">
     <Grid>
         <CheckBox x:Name="IsInVowelHarmony" Content="Слово подчиняется закону сингармонизма" HorizontalAlignment="Left" Margin="105,65,0,0" VerticalAlignment="Top" IsChecked="True" Height="16" Width="258"/>
         <TextBox x:Name="Input" HorizontalAlignment="Left" Height="23" Margin="105,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="258"/>
         <Button x:Name="Declense" Content="Просклонять" HorizontalAlignment="Left" Margin="195,86,0,0" VerticalAlignment="Top" Width="75" Click="Declense_Click"/>
 
-        <DataGrid Name="Table" AutoGenerateColumns="False" Margin="10,110,10,10" Width="450">
+        <DataGrid Name="Table" AutoGenerateColumns="False" Margin="10,110,10,10" Width="450" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Килеш" Binding="{Binding Case}" Width="Auto"/>
-                <DataGridTextColumn Header="Берлек сан" Binding="{Binding Singular}" Width="Auto"/>
-                <DataGridTextColumn Header="Күплек сан" Binding="{Binding Plural}" Width="Auto"/>
+                <DataGridTextColumn Header="Килеш" Binding="{Binding Case}" Width="150"/>
+                <DataGridTextColumn Header="Берлек сан" Binding="{Binding Singular}" Width="150"/>
+                <DataGridTextColumn Header="Күплек сан" Binding="{Binding Plural}" Width="150"/>
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="FirstSpecificLetter" Content="ө" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Width="70" Click="FirstSpecificLetter_Click"/>
