--- a/TatarDeclension/MainWindow.xaml
+++ b/TatarDeclension/MainWindow.xaml
@@ -12,8 +12,16 @@
         <CheckBox x:Name="IsInVowelHarmony" Content="Слово подчиняется закону сингармонизма" Margin="0,75,0,600" IsChecked="True" Height="25" Width="258" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <TextBox x:Name="Input" HorizontalAlignment="Center" Height="25" Margin="0,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="258"/>
         <Button x:Name="Declense" Content="Просклонять" HorizontalAlignment="Center" Margin="0,105,0,0" VerticalAlignment="Top" Width="75" Click="Declense_Click" Height="25"/>
-
         <DataGrid Name="Table" AutoGenerateColumns="False" Margin="22,145,21.6,10" Width="450" IsReadOnly="True">
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type DataGridRow}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsBold}" Value="True">
+                            <Setter Property="FontWeight" Value="Bold" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Килеш" Binding="{Binding Case}" Width="130">
                     <DataGridColumn.CellStyle>
@@ -34,6 +42,6 @@
         <Button x:Name="FourthSpecificLetter" Content="ә" HorizontalAlignment="Right" Margin="0,42,170,0" VerticalAlignment="Top" Width="75" Click="FourthSpecificLetter_Click" Height="25"/>
         <Button x:Name="FifthSpecificLetter" Content="җ" HorizontalAlignment="Right" Margin="0,42,90,0" VerticalAlignment="Top" Width="75" Click="FifthSpecificLetter_Click" Height="25"/>
         <Button x:Name="SixthSpecificLetter" Content="һ" HorizontalAlignment="Right" Margin="0,42,10,0" VerticalAlignment="Top" Width="75" Click="SixthSpecificLetter_Click" Height="25"/>
-        <Label Content="Версия 0,02" Margin="422,0,-0.4,676" Height="24" VerticalAlignment="Top"/>
+        <Label Content="Версия 0,03" Margin="422,0,-2.0,0" Height="24" VerticalAlignment="Top"/>
     </Grid>
 </Window>
